--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
     font-family: 'Lato', ‘Helvetica Neue’, 'Helvetica', 'sans-serif';
     font-size: 16px;
     font-weight: 300;
-
 }
 
 a:link, a:visited {
@@ -37,11 +36,6 @@ h3 {
 }
 
 .container-fluid {
-    margin-left: 30%
-    margin-right: 20px;
-    margin-top: 0;
-    margin-bottom:0;
-    background-image: url(../img/ricepaper_v3.png);
     opacity: 0.9;
 }
 
@@ -103,10 +97,15 @@ footer {
     text-align: right;
 }
 
-@media (min-width: 992px){
-    .motto {
-        display: inline;
+@media (min-width: 992px) {
+    .container-fluid {
+        margin-left: 30%;
+        margin-right: 20px;
+        margin-top: 0;
+        margin-bottom:0; 
+        background-image: url(../img/ricepaper_v3.png);
     }
+
     body {
         font-size: 18px;
         font-weight: 300;
@@ -115,21 +114,16 @@ footer {
         background-attachment: fixed;
     }
 
-    headeer {
+    header {
         position: relative;
     }
-    .container-fluid {
-        margin-left: 30%
-        margin-top: 20px;
-        margin-right: 20px;
-        margin-bottom: 20px ;
 
-    }
     nav {
         position: absolute;
         top: 10px;
         right: 10px;
     }
-
-
+    .motto {
+        display: inline;
+    }
 }
