--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,8 @@ h3 {
 }
 
 .container-fluid {
+    margin-top: 0;
+    margin-bottom: 0;
     opacity: 0.9;
 }
 
@@ -45,6 +47,7 @@ header {
     border-bottom: 5px solid #EA4A00;
     color: #FFFFFF
 }
+
  .motto {
      display: none;
  }
@@ -59,11 +62,13 @@ nav ul {
     padding: 0;
     margin: 0;
 }
+
 nav li {
     list-style: none;;
     display: inline-block;
     margin-right: 1em;
 }
+
 .general {
     padding: 1em;
     }
@@ -101,8 +106,8 @@ footer {
     .container-fluid {
         margin-left: 30%;
         margin-right: 20px;
-        margin-top: 0;
-        margin-bottom:0; 
+        margin-top: 20px;
+        margin-bottom: 20px;
         background-image: url(../img/ricepaper_v3.png);
     }
 
