--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,10 @@ footer {
     text-align: right;
 }
 
+.row rabbit {
+    margin: 0;
+}
+
 @media (min-width: 992px) {
     .container-fluid {
         margin-left: 30%;
